# ethersync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  ethersync.js  flake.nix  package-lock.json  package.json  rollup.config.js  server.js  tsconfig.json  yjs.js
.github/workflows/: ci.yml  deploy-nvim-plugin.yml  deploy-vim-plugin.yml  general.yml  integration.yml  mdbook.yml  nix.yml  nvim-plugin.yml  release.yml  reuse.yml  rust.yml  vim-plugin.yml
book/: .gitignore  README.md  book.toml
book/src/: SUMMARY.md  architecture.md  concepts.md  configuration.md  connection-making.md  daemon.md  editor-plugin-dev-guide.md  faq.md  features.md  file-events.md  file-ownership.md  first-steps.md  getting-started.md  git-integration-manual.md  git-integration-synchronized.md  git-integration.md  ignored-files.md  in-practice.md  installation.md  introduction.md  learn-from-us.md  local-first.md  neovim.md  offline-support.md  pair-programming.md  quickstart.md  related-projects.md  shared-notes.md  system-overview.md  vscode.md  workarounds.md
book/src/advanced/: git-integration.md
book/src/features/: file-events.md  offline-support.md  workarounds.md
book/src/installation/: README.md  daemon.md  neovim.md
book/src/use-cases/: pair-programming.md  shared-notes.md
book/theme/: favicon.svg.license
contrib/nix/: default.nix  ethersync.nix  neovim-with-ethersync.nix  nvim-ethersync.nix  overlay.nix  shell.nix
daemon/: .gitignore  .prettierrc  Cargo.toml  README.md  build.rs  clippy.toml  package-lock.json  package.json  server.js
daemon/docs/decisions/: 02-working-with-vims-eol-behavior.md
daemon/integration-tests/: Cargo.toml  README.md
daemon/integration-tests/src/: actors.rs  lib.rs  socket.rs
daemon/integration-tests/tests/: fuzzer.rs  nvim-plugin.rs  vim-plugin.rs
daemon/plugin-fuzz/: Cargo.toml
daemon/plugin-fuzz/src/: actors.rs
daemon/plugin-fuzz/tests/: random-input-nvim.rs  vim-plugin.rs
daemon/shared/: Cargo.toml
daemon/shared/src/: keypair.rs  lib.rs  messages.rs  path.rs  platform.rs  secret_address.rs  types.rs  wormhole.rs
daemon/shared/src/platform/: desktop.rs  webassembly.rs
daemon/src/: actors.rs  cli.rs  cli_ask.rs  config.rs  connect.rs  conversion.test.ts  conversion.ts  daemon.rs  daemon.test.ts  daemon.ts  document.rs  editor.rs  editor_connection.rs  editor_protocol.rs  ethersync.ts  fuzzer.test.ts  fuzzer.ts  fuzzing.ts  history.rs  integration.test.ts  json_server.ts  jsonrpc_forwarder.rs  jsonrpc_server.ts  keypair.rs  lib.rs  logging.rs  lsp_client.rs  main.rs  ot.rs  ot_server.test.ts  ot_server.ts  path.rs  peer.rs  run_fuzzer.ts  sandbox.rs  types.rs  unicode_conversion.test.ts  unicode_conversion.ts  watcher.rs  wormhole.rs
daemon/src/editor/: mod.rs
daemon/src/editor/unix/: mod.rs
daemon/src/editor/windows/: mod.rs
daemon/src/jsonrpc_forwarder/: mod.rs
daemon/src/jsonrpc_forwarder/unix/: mod.rs
daemon/src/jsonrpc_forwarder/windows/: mod.rs
daemon/src/peer/: sync.rs
docs/: daemon-editor-protocol.md  editor-plugin-dev-guide.md  ethersync-cli-ui.md  teamtype-cli-ui.md
docs/assets/: BMFTR-en.webp.license  Logo_okfde_black.png.license  PrototypeFund_logo_icon_dark.png.license
docs/decisions/: 00-use-markdown-any-decision-records.md  0000-use-markdown-any-decision-records.md  0001-use-operational-transform-as-editor-backend-protocol.md  01-use-operational-transform-as-editor-backend-protocol.md  02-working-with-vims-eol-behavior.md  03-process-structure.md  04-file-saving.md  05-crdt-library.md  06-operational-transform-in-rust.md  07-cursor-positions.md  08-secure-connections.md  09-multi-file.md  10-cursor-positions-ephemeral.md  10-multi-editor.md  README.md  adr-template.md
emacs-plugin/: ethersync.el
intellij-plugin/: .gitignore  DEVELOPMENT.md  build.gradle.kts  settings.gradle.kts
intellij-plugin/.run/: Run IDE with Plugin.run.xml
intellij-plugin/src/main/kotlin/io/github/ethersync/: ConnectToPeerAction.kt  DaemonOutputNotifier.kt  DaemonToolWindowFactory.kt  EthersyncService.kt  EthersyncServiceImpl.kt  EthersyncToolWindowFactory.kt  Icons.kt  StartEthersyncDaemonAction.kt  StartEthersyncDaemonTerminalShellCommandHandler.kt  ToolWindowFactory.kt
lua/: connection.lua  utils.lua
nix/: default.nix  ethersync.nix  neovim-with-ethersync.nix  nvim-ethersync.nix  overlay.nix  shell.nix
nvim-plugin/: .gitignore  .stylua.toml  DEVELOPMENT.md  README.md
nvim-plugin/doc/: ethersync.txt  ethersync.txt.license  teamtype.txt
nvim-plugin/lua/: changetracker.lua  cursor.lua  ethersync.lua  teamtype.lua
nvim-plugin/lua/ethersync/: changetracker.lua  client.lua  connection.lua  cursor.lua  helpers.lua
nvim-plugin/lua/teamtype/: changetracker.lua  connection.lua  cursor.lua  helpers.lua  logging.lua  lsp_util.lua
nvim-plugin/plugin/: ethersync.lua  teamtype.lua
plugin/: ethersync.lua
public/: index.html
rust/: Cargo.toml
rust/src/: actors.rs  client.rs  daemon.rs  lib.rs  logging.rs  main.rs  ot.rs  types.rs
server/: README.md  callback.js  package-lock.json  package.json  server.js  utils.js
server/public/: index.html
server/server/: utils.js
server/src/: App.svelte  Editor.svelte
src/: App.svelte  Editor.svelte  ethersync.ts  jsonrpc.ts  main.rs  ndjson_server.js  ndjson_server.ts  ot.js  ot.ts  receiver.ts
tools/: dummy-jsonrpc.py  fake-daemon.py
tools/automerge-baker/: Cargo.toml
tools/automerge-baker/src/: main.rs
vim-plugin/: .luacheckrc  .stylua.toml  README.md
vim-plugin/lua/: changetracker.lua  cursor.lua  dlog.lua  logging.lua  utils.lua
vim-plugin/plugin/: ethersync.lua
vscode-plugin/: .eslintrc.json  .gitignore  .prettierrc  .vscode-test.mjs  .vscodeignore  DEVELOPMENT.md  README.md  package-lock.json  package.json  package.json.license  tsconfig.json  vsc-extension-quickstart.md
vscode-plugin/images/: teamtype-logo.png.license
vscode-plugin/src/: cursor.ts  extension.ts  minimal.ts
vscode-plugin/src/test/: extension.test.ts
vscode-plugin/src/vscode/: diff.ts  hash.ts
(+14 files in other folders)
