[package]
name = "ethersync"
description = "Enables real-time co-editing of local text files."
version = "0.1.0"
edition = "2021"
default-run = "ethersync"

[dependencies]
serde_json = { version = "1" }
jsonrpc-core = "18.0.0"
clap = { version = "4.5.3", features = ["derive"] }
automerge = "0.5.9"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
operational-transform = "0.6.1"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nvim-rs = {version = "0.7.0", features = ["use_tokio"]}
temp-dir = "0.1.13"
async-trait = "0.1.79"
pretty_assertions = "1.4.0"
futures = "0.3.30"
ropey = "1.6.1"
serde = "1.0.198"
tracing-test = "0.2.4"

[features]

simulate_edits_from_editor = []
simulate_edits_on_crdt = []
