# SPDX-FileCopyrightText: 2024 Danny McClanahan <dmcC2@hypnicjerk.ai>
# SPDX-FileCopyrightText: 2024 blinry <mail@blinry.org>
# SPDX-FileCopyrightText: 2024 zormit <nt4u@kpvn.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ethersync-integration-tests"
description = "End-to-end testing of Ethersync."
version = "0.0.0"
edition = "2021"
publish = false

[[test]]
name = "fuzzer"
# We set process-global state in this test, so we want to run our own main method.
harness = false

[dependencies]
async-trait = "0.1.79"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
rand = "0.8.5"
temp-dir = "0.1.13"
tokio = { version = "1", default-features = false, features = ["process"] }
serde_json = "1"

[dependencies.ethersync]
path = ".."
default-features = false

[dependencies.ethersync-shared]
path = "../shared"
default-features = false

[dev-dependencies]
futures = { version = "0.3.30", default-features = false }
pretty_assertions = "1.4.0"
serial_test = "3.1.1"
tracing = "0.1.40"
anyhow = "1.0.81"

# This crate needs to define specific optimization settings, so we can't put it in the
# same workspace.
[workspace]
members = ["."]

# The tests in this module time out without optimizations enabled.
[profile.test]
opt-level = 3
